# rust

./: .gitignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: main.rs
crates/geometry/src/figures/: circle.rs  rectangle.rs
crates/playground/: Cargo.toml
crates/playground/src/: lib.rs
crates/problems/src/arrays/: best_time_to_buy_and_sell_stock.rs  best_time_to_buy_and_sell_stock_test.rs  mod.rs  sum_vec.rs  sum_vec_test.rs
crates/problems/src/math/: factorial.rs  factorial_test.rs
crates/regexes/src/: basic.rs  basic_test.rs
crates/snake/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/node/: average.js  package.json
crates/wasm/src/: README.md  lib.rs
crates/web3-basic/: Cargo.toml
crates/web3-basic/src/: balances.rs  main.rs  support.rs  system.rs
geometry/src/: main.rs
geometry/src/figures/: circle.rs
problems/src/: lib.rs  main.rs  sum_vec_test.rs
problems/src/arrays/: sum_vec.rs
problems/src/math/: factorial_test.rs
regexes/: Cargo.toml
snake/: Cargo.toml
snake/src/: main.rs
src/: borrowing.rs  main.rs  types.rs
src/geometry/: circle.rs
src/methods/: rectangle.rs
tacticool/: Cargo.toml
tacticool/src/: main.rs
tacticool/src/methods/: apply_weapons.rs
tacticool/src/weapons/: mod.rs
tacticool/src/weapons/models/: mod.rs
tacticool/src/weapons/primary/: mod.rs  rotogun.rs
